src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Pearson_Campus_Picklist__c</fullName>
        <description>Used to specify the Pearson Campus for the Entity - required to enable automated account allocations</description>
        <label>Pearson Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pearson_Campus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote if the Account is a Pearson Entity- can only be edited by an admin user</description>
        <label>Pearson Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pearson_Institution__c</fullName>
        <label>Pearson Institution</label>
        <picklist>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGI</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Sales_AccountTEXT__c</fullName>
        <description>Systematically populated if an account above in the Account Hierarchy has &apos;Primary Selling Parent&apos;=True</description>
        <label>Primary Selling Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System generated - displays the Primary Selling Account for the Acount</description>
        <label>Primary Selling Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Primary Selling Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account_check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the Account is specified as the primary selling account in an account hierarchy. If this checkbox is set to &apos;TRUE&apos; then the name of this account will be populated on all accounts below in the account hierarchy.</description>
        <label>Primary Selling Account (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>Field used to hold a link to NA Field Sales external system &apos;Ignite&apos; (Also known as Profile)</description>
        <formula>HYPERLINK(&quot;http://ignite.pearson.com/Ignite/router.ashx?SalesForceID=&quot; &amp; DataHub_Key__c, IMAGE(&quot;/resource/IgniteImage&quot;, &quot;IGNITE1&quot;),&quot;_new&quot;)</formula>
        <label>Ignite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Number__c</fullName>
        <description>Relevant to Purchasing accounts - used to capture the Purchasing Number of the Account</description>
        <label>Purchasing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Account Region. Dependent on Geography.</description>
        <label>Region</label>
        <picklist>
            <controllingField>Geography__c</controllingField>
            <picklistValues>
                <fullName>UK - North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scandi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Trading_Name__c</fullName>
        <description>Core: Account Registered Trading Name from Bookmaster</description>
        <label>Registered Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Account_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. Used in the &apos;New Account Request&apos; Process</description>
        <label>Request Account Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sampling_Account_Number__c</fullName>
        <description>External Account Number passed by OneCRM to ERP System (UOPS) when creating the Account in the ERP</description>
        <label>Sampling Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sampling_Sub_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Sampling Sub-Account Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <description>Field to track the type of school should also be reflected by the low &amp; high grade values</description>
        <label>School Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspirational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Core: Account profile  - CUTIE segmentation for schools</description>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Socrates_Account_Number__c</fullName>
        <description>Account ID in the Socrates system.</description>
        <inlineHelpText>Unique ID in the Socrates system.</inlineHelpText>
        <label>Socrates Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>Javier Alaniz 02/04/15: The following field identifies the Specialty on an account by pulling the specialty from the Pearson Course Code record it is related to.  This field will be replaced once devmaster 1 &amp; 2 are merged, since the current build in devmaster1 does not include the Pearson Course Code in  devmaster1 to enable this design in the same environment.</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>H&amp;SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Address_Number__c</fullName>
        <description>US FS ID field for Standard Address Number SAN#</description>
        <label>Standard Address Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <description>US FS ID for Store Number - will be relevant to Bookstores</description>
        <label>Store Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <description>CORE</description>
        <label>Students</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Identifies the organisation sub category for the Account. Dependent on Type</description>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Organisation_Type__c</controllingField>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <description>Core: Bookmaster account territory code</description>
        <label>Territory Code</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Territory_Code_s__c</fullName>
        <description>The following field identifies the territor(ies) (via territory code(s)) an account should be assigned to</description>
        <inlineHelpText>Please identify the territory code(s) an account should be assigned to</inlineHelpText>
        <label>Territory Code(s)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Global: Used to identify specific type of organisation</description>
        <label>Type</label>
        <picklist>
            <controllingField>Organisation_Type__c</controllingField>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Skills &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Educational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ultimate_PID__c</fullName>
        <description>CORE adopted from ICOM - Integration field</description>
        <label>Ultimate PID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <formula>IF( LEN(Parent.Name)&lt;1 , Name , 
IF( LEN(Parent.Parent.Name )&lt;1 ,Parent.Name, 
IF( LEN(Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Name, 
IF( LEN(Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Name, 
IF( LEN(Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Name, 
IF( LEN(Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Name, 
IF( LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Name, 
&quot;Ultimate Parent Beyond 7 Levels&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>University</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vista_Account_Number__c</fullName>
        <description>CORE Integration field - Unique ID in the VISTA system.</description>
        <inlineHelpText>Unique ID in the Socrates system.</inlineHelpText>
        <label>Vista Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10_Enrollments__c</fullName>
        <description>CORE - Number of students enrolled this year in Year 10</description>
        <inlineHelpText>Number of students enrolled this year in Year 10</inlineHelpText>
        <label>Year 10 Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_11_Enrollments__c</fullName>
        <description>CORE - Number of students enrolled this year in Year 11</description>
        <inlineHelpText>Number of students enrolled this year in Year 11</inlineHelpText>
        <label>Year 11 Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_12_Enrollments__c</fullName>
        <description>CORE - Number of students enrolled this year in Year 12</description>
        <inlineHelpText>Number of students enrolled this year in Year 12</inlineHelpText>
        <label>Year 12 Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Sales_AccountTEXT__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts_US_HE</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Organisation_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>Number_enrolled__c</columns>
        <columns>Sampling_Account_Number__c</columns>
        <columns>Pearson_Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Higher Ed</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>All Accounts - US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Primary_Accounts_US_HE</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Organisation_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>Number_enrolled__c</columns>
        <columns>Sampling_Account_Number__c</columns>
        <columns>Pearson_Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Higher Ed</value>
        </filters>
        <filters>
            <field>Primary_Selling_Account_check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>All Primary Accounts - US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BookstoreAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Bookstore</value>
        </filters>
        <label>Bookstore Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CorporateAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Corporate</value>
        </filters>
        <label>Corporate Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HEDAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HigherEducation</value>
        </filters>
        <label>HED Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Learner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Pearson_Account_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Learner</value>
        </filters>
        <label>Learner Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Territory_Code_s__c</field>
            <operation>equals</operation>
            <value>2ZZ</value>
        </filters>
        <label>My Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Account</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Territory_Accounts_US_HE</fullName>
        <columns>Primary_Selling_Account__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organisation_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>Number_enrolled__c</columns>
        <columns>Sampling_Account_Number__c</columns>
        <columns>Pearson_Account_Number__c</columns>
        <filterScope>MyTeamTerritory</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>My Team&apos;s Territory Accounts - US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Territory_Accounts_All_US_HE</fullName>
        <columns>Primary_Selling_Account__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organisation_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>Number_enrolled__c</columns>
        <columns>Sampling_Account_Number__c</columns>
        <columns>Pearson_Account_Number__c</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>My Territory Accounts (All) - US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Territory_Accounts_US_HE</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Organisation_Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>Number_enrolled__c</columns>
        <columns>Sampling_Account_Number__c</columns>
        <columns>Pearson_Account_Number__c</columns>
        <filterScope>MyTerritory</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <filters>
            <field>Primary_Selling_Account_check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Territory Accounts - US HE</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NonIntegratedAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Integrated</value>
        </filters>
        <label>Non Integrated Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pearson_Campus</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Pearson_Account_Number__c</columns>
        <columns>Pearson_Campus_Picklist__c</columns>
        <columns>Pearson_Institution__c</columns>
        <columns>Pearson_Campus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pearson_Campus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pearson Campus</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SchoolAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.School</value>
        </filters>
        <label>School Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Bookstore</fullName>
        <active>true</active>
        <description>Core: Captures Bookstore accounts from Bookmaster</description>
        <label>Bookstore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate</fullName>
        <active>true</active>
        <description>CORE - Used to Corporate Accounts</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>HigherEducation</fullName>
        <active>true</active>
        <description>Core: Captures Higher Education accounts from Bookmaster</description>
        <label>Higher Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Learner</fullName>
        <active>true</active>
        <label>Learner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Integrated</fullName>
        <active>true</active>
        <description>Core: Allows a new account to be created - will not be sent outside of salesforce via integration</description>
        <label>Non Integrated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organisation</fullName>
        <active>true</active>
        <label>Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <description>Core: Captures School accounts from Bookmaster</description>
        <label>School</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Academic_Achiever_level_req_for_Schools</fullName>
        <active>true</active>
        <description>For Organisation Account rececords with the type school the Academic Achiever level is required.</description>
        <errorConditionFormula>Market__c=&apos;ZA&apos;  
&amp;&amp;  
 RecordType.DeveloperName==&apos;Organisation&apos;
&amp;&amp;  
ISPICKVAL(Academic_Achievement__c,&apos;&apos;)
&amp;&amp;
ISPICKVAL( Organisation_Type__c,&apos;School&apos;)
&amp;&amp;
NOT($Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Academic_Achievement__c</errorDisplayField>
        <errorMessage>A Value must be provided for the Academic Achiever level for School Organisation types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_New_Bookmaster_Account_Request</fullName>
        <active>true</active>
        <description>CORE - On a New Account type when the user check the &quot;Create Bookmaster Account&quot; there is a minimum set of data required.</description>
        <errorConditionFormula>Create_Bookmaster_Account__c = True
&amp;&amp;
OR(
ISBLANK(  BillingStreet  ),
ISBLANK(  BillingCity  ),
ISBLANK(  BillingPostalCode  ),
OR(ISBLANK(BillingCountry),AND(BillingCountry==&quot;Australia&quot;,ISBLANK(BillingState))),
OR(ISBLANK(ShippingCountry),AND(ShippingCountry==&quot;Australia&quot;,ISBLANK(ShippingState))),
ISBLANK(  ShippingStreet  ),
ISBLANK(  ShippingCity  ),
ISBLANK(  ShippingPostalCode  ),
ISPICKVAL(Category__c, &quot;&quot;),
ISBLANK( Email__c ),
ISBLANK( Phone )
)</errorConditionFormula>
        <errorMessage>When requesting a Bookmaster Account to be Created, the following Account fields must be populated at a minimum:
Shipping Address,
Billing Address,
Category,
Phone,
Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Validation_Rule</fullName>
        <active>true</active>
        <description>A validation rule to ensure that only certain characters are allowed to be populated in the Fax field.</description>
        <errorConditionFormula>IF( 
ISBLANK( Fax ) , false ,NOT(REGEX( Fax , &quot;[0-9+\\-\\(\\)\\&apos; &apos;]*&quot;))) 
&amp;&amp;(($RecordType.Name==$Label.PS_Account_Organisation)||RecordType.Name =&apos;Learner&apos;)
&amp;&amp; ($Setup.Bypass_Settings__c.Disable_Validation_Rules__c==false)</errorConditionFormula>
        <errorMessage>Please enter a valid fax number containing only these characters: 0-9, +, -, ()</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Learner_Account_Name_is_Read_Only</fullName>
        <active>true</active>
        <description>Global: Used to Ensure that Account Name on a Learner Account is only updated via the Primary Contact</description>
        <errorConditionFormula>AND( 
RecordType.Name =&apos;Learner&apos;, 
Account_Name_is_Read_only__c == true, 
OR( ISCHANGED( Name ),ISCHANGED(Account_Surname__c)),
NOT($Setup.Bypass_Settings__c.Disable_Validation_Rules__c))</errorConditionFormula>
        <errorMessage>To change the Account Name/Account Surname, Please update the First Name/Last Name on the Student&apos;s Contact record ( Contact with Primary Checkbox)</errorMessage>
    </validationRules>
</CustomObject>